--- a/.github/workflows/upload-assets.yml
+++ b/.github/workflows/upload-assets.yml
@@ -47,7 +47,8 @@ jobs:
         uses: astral-sh/setup-uv@v7
       - name: Install Dependencies
         run: |
-          uv python install 3.10
+          uv python install 3.11
+          uv python pin 3.11
           uv sync
       - name: Build Extension
         run: | # build.py need tomlkit to edit blender_manifest.toml
