--- a/.github/workflows/upload-assets.yml
+++ b/.github/workflows/upload-assets.yml
@@ -63,5 +63,5 @@ jobs:
         with:
           upload_url: ${{ needs.draft_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./package.zip
-          asset_name: OmoospaceForBlender.${{ needs.draft_release.outputs.version }}.${{ matrix.platform }}.zip
+          asset_name: OmoospaceBlender.${{ needs.draft_release.outputs.version }}.${{ matrix.platform }}.zip
           asset_content_type: application/zip
