--- a/src/omoospaceblender/blender_manifest.toml
+++ b/src/omoospaceblender/blender_manifest.toml
@@ -6,7 +6,7 @@ id = "omoospace"
 version = "0.2.0"
 name = "Omoospace"
 tagline = "Manage your project files in omoospace's way"
-maintainer = "Ma Nan <icrdr2010@outlook.com>"
+maintainer = "MaNan <icrdr2010@outlook.com>"
 # Supported types: "add-on", "theme"
 type = "add-on"
 
@@ -25,7 +25,7 @@ blender_version_min = "4.2.0"
 # https://docs.blender.org/manual/en/dev/advanced/extensions/licenses.html
 license = ["SPDX:MIT"]
 # Optional: required by some licenses.
-copyright = ["2024 OmooLab"]
+copyright = ["2026 OmooLab"]
 
 # Optional list of supported platforms. If omitted, the extension will be available in all operating systems.
 platforms = ["windows-x64"]
@@ -33,7 +33,13 @@ platforms = ["windows-x64"]
 
 # Optional: bundle 3rd party Python modules.
 # https://docs.blender.org/manual/en/dev/advanced/extensions/python_wheels.html
-wheels = ["./wheels/nutree-0.5.1-py3-none-any.whl", "./wheels/omoospace-0.2.4-py3-none-any.whl", "./wheels/pypinyin-0.49.0-py2.py3-none-any.whl", "./wheels/ruamel.yaml-0.17.40-py3-none-any.whl", "./wheels/ruamel_yaml_clib-0.2.15-cp311-cp311-win_amd64.whl"]
+wheels = [
+    "./wheels/nutree-0.5.1-py3-none-any.whl",
+    "./wheels/omoospace-0.2.5-py3-none-any.whl",
+    "./wheels/pypinyin-0.49.0-py2.py3-none-any.whl",
+    "./wheels/ruamel.yaml-0.17.40-py3-none-any.whl",
+    "./wheels/ruamel_yaml_clib-0.2.15-cp311-cp311-win_amd64.whl",
+]
 
 
 ## Optional: add-ons can list which resources they will require:
@@ -51,7 +57,7 @@ wheels = ["./wheels/nutree-0.5.1-py3-none-any.whl", "./wheels/omoospace-0.2.4-py
 ## For longer explanations use the documentation or detail page.
 #
 [permissions]
-files = "Manage your project files in omoospace way"
+files = "Manage your project files in omoospace's way"
 
 # Optional: build settings.
 # https://docs.blender.org/manual/en/dev/advanced/extensions/command_line_arguments.html#command-line-args-extension-build
