--- a/src/omoospaceblender/blender_manifest.toml
+++ b/src/omoospaceblender/blender_manifest.toml
@@ -23,7 +23,7 @@ blender_version_min = "4.2.0"
 
 # License conforming to https://spdx.org/licenses/ (use "SPDX: prefix)
 # https://docs.blender.org/manual/en/dev/advanced/extensions/licenses.html
-license = ["SPDX:MIT"]
+license = ['SPDX:GPL-3.0-or-later']
 # Optional: required by some licenses.
 copyright = ["2026 OmooLab"]
 
